Initial implementation of reassignable hotkeys